# SFD

./: .gitattributes  README.md  pip-requirements.txt  setup.cfg
sfd/: core.py  setup_package.py
sfd/data/: EBV_to_filter.json  SFD_dust_4096_ngp.fits  SFD_dust_4096_sgp.fits  ps1-ebv-4.5kpc.fits
sfd/tests/: test_core.py
