[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = sfd
description = SFD dust maps
long_description = Get reddening from the Schlegel, Finkbeiner, Davis dust maps
author = Adrian Price-Whelan
author_email = adrn@astro.columbia.edu
license = MIT
url = https://github.com/adrn/SFD
edit_on_github = False
github_project = adrn/SFD

[entry_points]
astropy-package-template-example = packagename.example_mod:main